--- a/src/index.css
+++ b/src/index.css
@@ -4,12 +4,12 @@ main {
   padding: 50px 30px;
 }
 :root {
-  --primary: #00635d;
-  --secondary: #db7f67;
+  --primary: #7fa99b;
+  --secondary: #7fa99b;
   --tertiary: #a9b2ac;
   --light: #ffffff;
   --dark: #1e1b18;
-  --darker: #0a0908;
+  --darker: #1e1b18;
   --error: rgb(228, 46, 1);
   --spacing-one: calc(1rem * 0.5);
   --spacing-two: calc(1rem);
@@ -59,6 +59,7 @@ h2 {
 
 h3 {
   font-size: 1.75rem;
+  color: var(--tertiary);
 }
 
 h4 {
@@ -79,9 +80,12 @@ p {
 }
 
 a {
-  color: var(--tertiary);
+  color: var(--secondary);
   text-decoration: none;
   font-weight: bold;
+  line-height: 1.5;
+  font-size: 22px;
+  letter-spacing: 0.1em;
 }
 
 a:hover {
@@ -106,11 +110,11 @@ button {
   text-decoration: none;
   border-radius: 0.5rem;
   border: none;
-  color: #fff;
+  color: var(--darker);
   outline: none;
   cursor: pointer;
   margin: 0 1px;
-  background-color: var(--primary);
+  background-color: var(--secondary);
   padding: 10px 15px;
 }
 
@@ -212,7 +216,7 @@ textarea {
   text-align: center;
   margin: 0 auto 20px auto;
   width: 50%;
-  color: var(--tertiary);
+  color: var(--secondary);
 }
 
 /* ABOUT ME STYLES START */
@@ -331,15 +335,6 @@ textarea {
   font-size: 18px;
   font-weight: 600;
   margin-bottom: 25px;
-}
-
-a {
-  border-radius: 5px;
-  color: var(--primary);
-  font-weight: 600;
-  padding: 2px 4px;
-  margin-left: -2px;
-  margin-right: -2px;
 }
 
 .navActive {
