--- a/src/index.css
+++ b/src/index.css
@@ -304,6 +304,70 @@ textarea {
   text-align: center;
 }
 
+.project {
+  position: relative;
+  width: 100%;
+  max-width: 500px;
+  height: 300px;
+  margin: 30px;
+}
+
+.project-bg {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
+.project-text {
+  color: var(--secondary);
+  position: absolute;
+  top: 0px;
+  bottom: 0px;
+  left: 0px;
+  right: 0px;
+  padding: 50px;
+  z-index: 900;
+  opacity: 0;
+  transition: all 0.5s ease-in-out;
+}
+
+.project-text:hover {
+  background-color: var(--alpha);
+  opacity: 1;
+  border: 10px solid var(--secondary);
+}
+
+.project-text h3 {
+  font-size: 2.5rem;
+}
+
+.project-text a {
+  text-decoration: none;
+  font-weight: bold;
+  font-size: 24px;
+  padding: 10px;
+  color: var(--dark);
+  transition: all 0.3s ease-in-out;
+  background-color: var(--secondary);
+}
+
+.project-text a:hover {
+  color: var(--darker);
+}
+
+.label {
+  display: inline-block;
+  vertical-align: top;
+  position: relative;
+  margin: 20px;
+  border: var(--secondary-color);
+  -webkit-box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.5),
+    0px 10px 7px rgba(0, 0, 0, 0.2);
+  -moz-box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.5),
+    0px 10px 7px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.5), 0px 10px 7px rgba(0, 0, 0, 0.2);
+}
+
 .img-thumbnail {
   width: auto;
   height: 300px;
